--- a/detoxify-next/styles/main.scss
+++ b/detoxify-next/styles/main.scss
@@ -4,6 +4,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
+$spotify-green: #1DB954;
+$text-color: #ffffff;
+
 * {
     padding: 0;
     margin: 0;
@@ -25,7 +28,7 @@ p:not(p:last-child) {
 }
 
 main a {
-    color: #1db954;
+    color: $spotify-green;
     text-decoration: underline;
 }
 
@@ -45,14 +48,14 @@ hr {
 }
 
 .btn-spotify {
-    background-color: #1db954;
+    background-color: $spotify-green;
     transition: background-color .75s ease-in-out;
     color: #fff;
     border-radius: 50px;
     padding: .25rem 2rem;
 
     &:hover {
-        background-color: lighten(#1db954, 10%);
+        background-color: lighten($spotify-green, 10%);
         transition: background-color .25s ease-in-out;
     }
 }
@@ -78,4 +81,99 @@ hr {
     margin-bottom: 1rem;
     padding: 0.375rem 0.75rem;
     border-radius: .25rem;
+}
+
+@keyframes glow {
+    0% { background-color: $spotify-green;}
+
+    50% { background-color: lighten($spotify-green, 25%); }
+
+    100% { background-color: $spotify-green; }
+}
+
+#get-artists-btn,
+#create-playlist-btn {
+    background-color: $spotify-green;
+    font-size: 1.5em !important;
+    
+    &.pending {
+        animation: glow 5s ease-in-out infinite;
+    }
+
+    .mobile-break {
+        display: block;
+
+        @media (min-width: 600px){
+            display: none;
+        }
+    }
+}
+
+#artists-gallery,
+#album-gallery {
+    height: calc(100vh - 200px);
+    min-height: 650px;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    &::-webkit-scrollbar-button {
+        display: none;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: $spotify-green;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: darken($spotify-green, 30%);
+        border-radius: 10px;
+    }
+}
+
+#artists-gallery {
+    .artist-container {
+        display: inline-block;
+    }
+
+    .artist-no {
+        padding-right:1em;
+        padding-left: .5em; // 1em padding right minus .5 anchor padding
+    }
+
+    .artist-image {
+        object-fit: cover;
+        height: 75px;
+        width: 75px;
+
+        &.no-artist-image {
+            background-color: black;
+        }
+    }
+
+    .artist-name {
+        padding: 0 1em;
+    }
+
+    a {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        margin: .25em;
+        padding: .5em;
+        background-color: #000000;
+        color: $text-color;
+
+        div {
+            display: inline-block;
+        }
+
+        &:hover {
+            background-color: #222222;
+            color: $text-color;
+        }
+    }
 }
