--- a/detoxify-next/styles/main.scss
+++ b/detoxify-next/styles/main.scss
@@ -47,6 +47,10 @@ hr {
     fill: #fff;
 }
 
+header {
+    z-index: 10;
+}
+
 .btn-spotify {
     background-color: $spotify-green;
     transition: background-color .75s ease-in-out;
@@ -224,6 +228,30 @@ hr {
                         table tbody tr td {
                             vertical-align: super;
                         }
+
+                        table {
+                            display: block;
+                            height: 202px;
+                            overflow-y: auto;
+
+                            &::-webkit-scrollbar {
+                                width: 10px;
+                            }
+            
+                            &::-webkit-scrollbar-button {
+                                display: none;
+                            }
+            
+                            &::-webkit-scrollbar-thumb {
+                                border-radius: 10px;
+                                background-color: $spotify-green;
+                            }
+            
+                            &::-webkit-scrollbar-track {
+                                background-color: darken($spotify-green, 30%);
+                                border-radius: 10px;
+                            }
+                        }
                     }
 
                     .flip-card-front,
@@ -245,7 +273,7 @@ hr {
 
                         .track-list-container {
                             .track-no {
-                                width: 25%;
+                                width: 33%;
                             }
 
                             tbody {
@@ -298,7 +326,7 @@ hr {
             }
 
             .flip-card-button {
-                [id^="flip-view-albums-"] {
+                [id^="flip-view-album-"] {
                     display: none;
                 }
             }
@@ -314,7 +342,7 @@ hr {
 
             tr  {
                 td {
-                    padding: .75em 0;
+                    padding: .75em .25em;
                     text-align: left;
                     border-bottom: 1px solid #191919;
                 }
